--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+@import "~bootstrap/dist/css/bootstrap.css";
+body{
+    background-color: #000000;
+    color: #d9d9d9;
+}
+
+hr{
+    background-color: #fff700;
+}
